--- a/menuStyle.css
+++ b/menuStyle.css
@@ -46,9 +46,9 @@ main {
   width: 90%;
   height: 50%;
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
     align-items: center;
-    flex-direction: column;
+    flex-direction: row;
 }
 
 .gameSetup .setting_container h2{
