--- a/menuStyle.css
+++ b/menuStyle.css
@@ -10,7 +10,7 @@ html {
 }
 
 header {
-  height: 15vh;
+  height: 9vh;
   width: auto;
   background: rgb(0, 0, 0);
   display: flex;
@@ -25,7 +25,7 @@ label, input{
 }
 
 main {
-  height: 75vh;
+  height: 90vh;
   width: auto;
   background: rgb(250, 250, 250);
   display: flex;
@@ -44,21 +44,37 @@ main {
   align-items: center;
 }
 .gameSetup .setting_container {
-  background-color: brown;
+  background-color: black;
   /* Arriba | Derecha | Abajo | Izquierda */
   margin: 1rem 0.5rem;
-  width: 90%;
-  height: 50%;
+  width: 330px;
+  height: 40%;
   display: flex;
   justify-content: space-evenly;
     align-items: center;
     flex-direction: row;
 }
 
-.gameSetup .setting_container h2{
+.gameSetup  h2{
   padding-top: 1.2rem;
   font-size: 3rem;
 }
+
+.player_names label{
+  color: rgb(255, 255, 255);
+   text-decoration: none;
+  font-weight: 600;
+  font-size: 2.1rem;
+  margin-bottom: 1rem;
+}
+
+.player_names input{
+  width: 120px;
+  height: 39px;
+  border:3px solid black;
+  border-radius: 6px;
+}
+
 
 /* DIV DE BOTONES DE SET */
 .gameSetup #sets_buttons{
@@ -70,11 +86,18 @@ main {
     width: 100%;
 }
 
-/* BOTONES DE SETS */
-.gameSetup #sets_buttons button{
-    height: 60%;
-    width: 30%;
+.gameSetup #sets_buttons label{
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+ font-weight: 600;
+ font-size: 2.1rem;
+ margin-bottom: 1rem;
 }
+
+.gameSetup #sets_buttons input{
+  transform: scale(2); 
+}
+
 
 /* DIV DE BOTONES DE GAME */
 .gameSetup #game_buttons{
@@ -87,17 +110,17 @@ main {
 }
 
 /* BOTONES DE GAMES */
-.gameSetup #game_buttons button{
-    height: 60%;
-    width: 30%;
+.gameSetup #game_buttons label{
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+ font-weight: 600;
+ font-size: 2.1rem;
+ margin-bottom: 1rem;
 }
 
-.gameSetup .setting_container #nombreJugadores{
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: row;
-    width: 100%;
-    height: 20%;
+.gameSetup #game_buttons input{
+  border:1px solid black;
+  transform: scale(2); 
 }
 
 .gameSetup .setting_container #input_nombre_jugadores{
@@ -108,20 +131,22 @@ main {
     height: 80%;
 }
 
-.gameSetup .setting_container #input_nombre_jugadores input{
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    width: 50%;
-    height: 50%;
-}
+
 /* BOTON DE START */
 .gameSetup .start button{
-    height: 50%;
-    width: 50%;
-    border-radius: 10%;
+    height: 90px;
+    width: 270px;
+    border-radius: 15px;
+    background-color: black;
     border: 2px solid black;
     
+  }
+
+  .gameSetup .start button a{
+   color: white;
+   text-decoration: none;
+  font-weight: 600;
+  font-size: 2.4rem;
   }
 
 footer {
