--- a/style.css
+++ b/style.css
@@ -9,15 +9,15 @@ html{
 }
 
 main{
-    height: 110vh;
+    height: 90vh;
     width: auto;
-    background: chartreuse;
     display:flex;   
     flex-direction: column;
 }
 
 .scorPerGameSection{
-    height: 55%;
+    margin-top: 30px;
+    height: 30vh;
     background-color: rgb(255, 255, 255);
     width:100%;
     display: flex;
@@ -36,7 +36,7 @@ main{
 
 .gamePoints__container{
     width: 80%;
-    height: 80%;
+    height: 100%;
     background-color: rgb(5, 5, 5);
     display: flex;
     justify-content: space-around;
@@ -63,7 +63,7 @@ main{
 
 
 .buttons{
-    height: 30 vh;
+    height: 30vh;
     background-color: rgb(26, 5, 20);
     width:100%;
     display: flex;
@@ -84,15 +84,19 @@ main{
 }
 .buttons .buttons__points button{
     margin: 0 auto;
-    padding: 3rem;
-    border: 2px solid black;
-    border-radius:30%;
+    width: 120px;
+    height: 66px;
+    background-color: black;
+    color: white;
+    border-radius: 1px solid black;
+    border-radius:15px;
+    font-weight: 600;
+    font-size: 2.4rem;
 }
 
 .buttons .buttons__points_redo{
     width: 80%;
     height: 30%;
-    
     background-color: rgb(255, 255, 255);
     display: flex;
     justify-content: center;
@@ -102,10 +106,10 @@ main{
 }
 .buttons .buttons__points_redo button{
     margin: 2rem auto;
-    padding: 1.5rem;
-    
+    width: 60px;
+    height: 60px;
     border: 2px solid black;
-    border-radius:20%;
+    border-radius:50%;
 }
 
 .buttons{
