--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ main{
 
 
 .buttons{
-    height: 30vh;
+    height: 36vh;
     background-color: rgb(26, 5, 20);
     width:100%;
     display: flex;
@@ -108,6 +108,7 @@ main{
     margin: 2rem auto;
     width: 60px;
     height: 60px;
+    background-color: black;
     border: 2px solid black;
     border-radius:50%;
 }
