--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ html{
 }
 
 main{
-    height: 90vh;
+    height: 99vh;
     width: auto;
     display:flex;   
     flex-direction: column;
@@ -62,7 +62,8 @@ main{
 
 
 .buttons{
-    height: 36vh;
+    margin-top: 30px;
+    height: 60vh;
     background-color: rgb(26, 5, 20);
     width:100%;
     display: flex;
@@ -84,8 +85,8 @@ main{
 .buttons .buttons__points button{
     margin: 0 auto;
     padding:6px;
-    width: 120px;
-    height: 66px;
+    width: 130px;
+    height: 81px;
     background-color: black;
     color: white;
     border-radius: 1px solid black;
@@ -125,57 +126,48 @@ main{
 } */
 
 .scoreGrid{
-    height:30% ;
-    background: chocolate;
+    margin-top: 45px;
+    background-color: chartreuse;
+    height:240px;
     width:100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+}
+
+.scoreGrid .grid1{
+    width: 90%;
+    height: 50%;
+    background-color: rgb(0, 89, 255);
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
     flex-direction: row;
 }
 
-.scoreGrid .grid{
-    width: 80%;
-    height: 80%;
-    background-color: rgb(0, 89, 255);
-    display: grid;
-   grid-template-columns: 20% 20% 20% 20% 20%;
+.scoreGrid .grid1 p,.scoreGrid .grid2 p{
+  font-weight: 600;
+  font-size: 2.4rem;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-/* <section class="scoreGrid">
-<section class="grid">
-  <div id="player1">Cadavid</div> */
+.scoreGrid .grid2{
+    width: 90%;
+    height: 50%;
+    background-color: rgb(116, 26, 26);
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: row;
+}
+
+
   /*SCORE GRID*/
 
-  .scoreGrid  #player1{
-    font-size:2.1rem;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-top: 20px;
-}
+  
 
-  .scoreGrid  #player1__game{
-      font-size:5.1rem;
-      font-family: Arial, Helvetica, sans-serif;
-      font-weight: bold;
-  }
-
-  .scoreGrid  #player2{
-    font-size:2.1rem;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-top: 20px;
-}
-
-  .scoreGrid  #player2__game{
-      font-size:5.1rem;
-      font-family: Arial, Helvetica, sans-serif;
-      font-weight: bold;
-  }
+  
 
 
   footer {
