--- a/style.css
+++ b/style.css
@@ -157,7 +157,9 @@ padding-top: 12px;
 .scoreGrid #grid1{
     width: 90%;
     height: 50%;
-    background-color: rgb(0, 89, 255);
+    background-color: rgb(255, 255, 255);
+    border: 3px solid black;
+    border-bottom: 0px;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -173,7 +175,8 @@ padding-top: 12px;
 .scoreGrid #grid2{
     width: 90%;
     height: 50%;
-    background-color: rgb(116, 26, 26);
+    background-color: rgb(218, 218, 218);
+    border: 3px solid black;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
