--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ padding-top: 12px;
     flex-direction: column;
 }
 
+
 .buttons .buttons__points{
     width: 80%;
     height: 50%;
@@ -111,6 +112,11 @@ padding-top: 12px;
     border-radius:15px;
     font-weight: 600;
     font-size: 2.4rem;
+}
+
+#disabled{
+    background-color: rgba(0, 0, 0, 0.5);
+    color: rgb(255, 255, 255);
 }
 
 .buttons .buttons__points_redo{
