--- a/indexStyle.css
+++ b/indexStyle.css
@@ -7,12 +7,12 @@
 html {
   font-size: 62.5%;
   font-family: Arial, Helvetica, sans-serif;
+  background-color:white;
 }
 
 header {
-  height: 6vh;
+  height: 10vh;
   width: auto;
-  background: rgb(0, 0, 0);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -20,18 +20,33 @@ header {
   color: white;
 }
 
+header a img{
+  width: 81px;
+  animation: rotation 15s infinite linear;
+}
+/* animation for the logo */
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
+}
+
 label, input{
   display: block;
 }
 
 main {
-  height: 90vh;
-  width: auto;
+  height: 84vh;
+  width: 100%;
   background: rgb(250, 250, 250);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color:white;
 }
 
 .gameSetup{
@@ -44,28 +59,22 @@ main {
   align-items: center;
 }
 .gameSetup .setting_container {
-  background-color: black;
+  background-color: #088dfadc;
+  border-radius: 12px;
   /* Arriba | Derecha | Abajo | Izquierda */
   margin: 1rem 0.5rem;
   width: 330px;
-  height: 99px;
+  height: 180px;
   display: flex;
   justify-content: space-evenly;
-    align-items: center;
-    flex-direction: row;
+  align-items: center;
+  flex-direction: row;
+  border: 4px solid black;
 }
 
 .gameSetup  h2{
   padding-top: 1.2rem;
   font-size: 3rem;
-}
-
-.player_names label{
-  color: rgb(255, 255, 255);
-   text-decoration: none;
-  font-weight: 600;
-  font-size: 2.1rem;
-  margin-bottom: 1rem;
 }
 
 .player_names input{
@@ -74,6 +83,7 @@ main {
   border:3px solid black;
   border-radius: 6px;
   padding: 0 4px;
+  text-align: center;
 }
 
 
@@ -97,6 +107,7 @@ main {
 
 .gameSetup #sets_buttons input{
   transform: scale(2); 
+  border:2px solid black;
 }
 
 
@@ -138,8 +149,8 @@ main {
     height: 60px;
     width: 150px;
     border-radius: 15px;
-    background-color: black;
-    border: 2px solid black;
+    background-color: #000000;
+    border: 6px solid black;
     
   }
 
@@ -155,11 +166,16 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(0, 0, 0);
-  color: white;
+  color: rgb(0, 0, 0);
+}
+
+footer a{
+  color: #000000;
+  text-decoration: black;
 }
 
 footer h3 {
+  color: #000000;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.5rem;
 }
@@ -181,13 +197,13 @@ footer h3 {
 
 /* Modal Content */
 .modal-content {
-  background-color: #fefefe;
+  background-color: #ffffff;
+  color: rgb(0, 0, 0);
   margin: auto;
   padding: 20px;
-  border: 1px solid #888;
   width: 80%;
   height:330px;
-  border:3px solid black;
+  border:4px solid black;
   border-radius: 6px;
   display: flex;
   justify-content: center;
