--- a/style.css
+++ b/style.css
@@ -32,13 +32,13 @@ width: 80%;
 justify-content: space-around;
 align-items: center;
 flex-direction: row;
-background-color: black;
 padding: 12px 6px;
 padding-top: 12px;
+margin-bottom: 9px;
 }
 
 .scorPerGameSection .names h2{
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     font-size: 2.4rem;
     font-weight: 600;
     font-family: Arial, Helvetica, sans-serif;
@@ -56,7 +56,9 @@ padding-top: 12px;
 .gamePoints__container{
     width: 80%;
     height: 80%;
-    background-color: rgb(5, 5, 5);
+    background-color: #088dfadc;
+    border-radius: 12px;
+    border: 4px solid black;
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -161,8 +163,8 @@ padding-top: 12px;
 .scoreGrid #grid1{
     width: 90%;
     height: 50%;
-    background-color: rgb(255, 255, 255);
-    border: 3px solid black;
+    background-color: #088dfa6c;
+    border: 6px solid black;
     border-bottom: 0px;
     display: flex;
     align-items: center;
@@ -171,7 +173,7 @@ padding-top: 12px;
 }
 
 .scoreGrid #grid1 p,.scoreGrid #grid2 p{
-  font-weight: 600;
+  font-weight: 700;
   font-size: 3rem;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -179,21 +181,13 @@ padding-top: 12px;
 .scoreGrid #grid2{
     width: 90%;
     height: 50%;
-    background-color: rgb(218, 218, 218);
-    border: 3px solid black;
+    background-color: #088dfa6c;
+    border: 6px solid black;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
     flex-direction: row;
 }
-
-
-  /*SCORE GRID*/
-
-  
-
-  
-
 
   footer {
     height: 6vh;
@@ -208,3 +202,56 @@ padding-top: 12px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.5rem;
   }
+
+  /* MODAL STUFF */
+  /* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content */
+  .modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    height:330px;
+    border:3px solid black;
+    border-radius: 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  
+  .modal-content .botones{
+    width: 80%;
+    height: auto;
+    margin-top: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: row;
+  }
+  
+  .modal-content .botones button{
+   font-weight: 600;
+   font-size: 2.1rem;
+   padding:9px;
+   color: white;
+   border-radius: 5px;
+   border: 3px solid black;
+   cursor: pointer;
+  }
+  
