--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ html{
     font-size: 62.5%;
 }
 
+
 main{
     height: 99vh;
     width: auto;
@@ -163,7 +164,7 @@ margin-bottom: 9px;
 .scoreGrid #grid1{
     width: 90%;
     height: 50%;
-    background-color: #088dfa6c;
+    background-color: #0059a1;
     border: 6px solid black;
     border-bottom: 0px;
     display: flex;
@@ -176,12 +177,13 @@ margin-bottom: 9px;
   font-weight: 700;
   font-size: 3rem;
   font-family: Arial, Helvetica, sans-serif;
+  color: white;
 }
 
 .scoreGrid #grid2{
     width: 90%;
     height: 50%;
-    background-color: #088dfa6c;
+    background-color: #0059a1;
     border: 6px solid black;
     display: flex;
     align-items: center;
@@ -203,7 +205,6 @@ margin-bottom: 9px;
     font-size: 1.5rem;
   }
 
-  /* MODAL STUFF */
   /* The Modal (background) */
 .modal {
     display: none; /* Hidden by default */
@@ -221,18 +222,25 @@ margin-bottom: 9px;
   
   /* Modal Content */
   .modal-content {
-    background-color: #fefefe;
+    background-color: #ffffff;
+    color: rgb(0, 0, 0);
     margin: auto;
     padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
     height:330px;
-    border:3px solid black;
+    border:4px solid black;
     border-radius: 6px;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+  }
+
+  .modal-content p{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 600;
+    font-size: 3rem;
+    text-align: center;
+    line-height: 1.5;
   }
   
   .modal-content .botones{
