--- a/style.css
+++ b/style.css
@@ -117,9 +117,8 @@ margin-bottom: 9px;
     font-size: 2.4rem;
 }
 
-#disabled{
-    background-color: rgba(0, 0, 0, 0.5);
-    color: rgb(255, 255, 255);
+#home{
+    display: none;
 }
 
 .buttons .buttons__points_redo{
@@ -145,12 +144,7 @@ margin-bottom: 9px;
     background: white;
 }
 
-/* .buttons button{
-    margin: 0 auto;
-    padding: 3rem;
-    border: 2px solid black;
-    border-radius:20%;
-} */
+
 
 .scoreGrid{
     height:240px;
@@ -164,7 +158,7 @@ margin-bottom: 9px;
 .scoreGrid #grid1{
     width: 90%;
     height: 50%;
-    background-color: #0059a1;
+    background-color: #f17501;
     border: 6px solid black;
     border-bottom: 0px;
     display: flex;
